--- a/templates/usuarios/nuevo.html.twig
+++ b/templates/usuarios/nuevo.html.twig
@@ -3,13 +3,23 @@
 {% block title %}Nuevo Usuario{% endblock %}
 
 {% block body %}
-<h1>Crear nuevo usuario</h1>
-{{ form_start(form) }}
-    {{ form_row(form.nombre) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.password) }}
-    {{ form_row(form.rol) }}
-    <button class="btn btn-success">Guardar</button>
-{{ form_end(form) }}
-<a href="{{ path('gestion_usuarios') }}" class="btn btn-secondary" style="margin-top: 15px;">Volver al listado</a>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h1 class="mb-4">Crear nuevo usuario</h1>
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    {{ form_start(form) }}
+                        {{ form_row(form.nombre) }}
+                        {{ form_row(form.email) }}
+                        {{ form_row(form.password) }}
+                        {{ form_row(form.rol) }}
+                        <button class="btn btn-success mt-3">Guardar</button>
+                    {{ form_end(form) }}
+                    <a href="{{ path('gestion_usuarios') }}" class="btn btn-secondary mt-3">Volver al listado</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
