Diseño de interfaz de y crud de ingredientes

--- a/templates/administrador/index.html.twig
+++ b/templates/administrador/index.html.twig
@@ -7,6 +7,7 @@
 <div style="display: flex; gap: 20px;">
     <a href="{{ path('gestion_usuarios') }}" class="btn btn-primary">Gestión de Usuarios</a>
     <a href="{{ path('gestion_recetas') }}" class="btn btn-secondary">Gestión de Recetas</a>
+    <a href="{{ path('gestion_ingredientes') }}" class="btn btn-success">Gestión de Ingredientes</a>
 </div>
 
 {% endblock %}
