--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,7 +11,7 @@
             <h1 class="text-lg font-semibold text-gray-700">ReciTech</h1>
         </div>
         <nav class="flex items-center space-x-6">
-            <a href="pages/PaginaInicioSesion.html" class="bg-green-100 text-green-600 px-4 py-2 rounded-lg hover:bg-green-200">
+            <a href="/inicio-de-sesion" class="bg-green-100 text-green-600 px-4 py-2 rounded-lg hover:bg-green-200">
                 Empezar
             </a>
         </nav>
