--- a/templates/recetas/editar.html.twig
+++ b/templates/recetas/editar.html.twig
@@ -6,15 +6,28 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h1 class="mb-4">Editar Receta</h1>
+            <h1 class="mb-4">Editar receta</h1>
             <div class="card shadow-sm">
                 <div class="card-body">
                     {{ form_start(form) }}
                         {{ form_row(form.nombre) }}
-                        {{ form_row(form.dificultad) }}
-                        {{ form_row(form.tiempo) }}
                         {{ form_row(form.explicacion) }}
+                        {{ form_row(form.tiempo) }}
                         {{ form_row(form.calorias) }}
+                        {{ form_row(form.dificultad) }}
+
+                        <h5>Ingredientes</h5>
+                        <div id="receta_ingredientes"
+                             data-prototype="{{ form_widget(form.recetaIngredientes.vars.prototype)|e('html_attr') }}">
+                            {% for formIngrediente in form.recetaIngredientes %}
+                                <div class="ingrediente-item mb-2">
+                                    {{ form_widget(formIngrediente) }}
+                                    <button type="button" class="btn btn-danger btn-sm eliminar-ingrediente ms-2">Eliminar</button>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <button type="button" class="btn btn-info mt-2" id="add-ingrediente">Añadir ingrediente</button>
+
                         <button class="btn btn-success mt-3">Guardar cambios</button>
                     {{ form_end(form) }}
                     <a href="{{ path('gestion_recetas') }}" class="btn btn-secondary mt-3">Volver al listado</a>
@@ -23,4 +36,27 @@
         </div>
     </div>
 </div>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var collectionHolder = document.getElementById('receta_ingredientes');
+    var addButton = document.getElementById('add-ingrediente');
+    var index = collectionHolder.querySelectorAll('.ingrediente-item').length;
+
+    addButton.addEventListener('click', function() {
+        var prototype = collectionHolder.dataset.prototype;
+        var newForm = prototype.replace(/__name__/g, index);
+        var div = document.createElement('div');
+        div.classList.add('ingrediente-item', 'mb-2');
+        div.innerHTML = newForm + '<button type="button" class="btn btn-danger btn-sm eliminar-ingrediente ms-2">Eliminar</button>';
+        collectionHolder.appendChild(div);
+        index++;
+    });
+
+    collectionHolder.addEventListener('click', function(e) {
+        if (e.target && e.target.classList.contains('eliminar-ingrediente')) {
+            e.target.closest('.ingrediente-item').remove();
+        }
+    });
+});
+</script>
 {% endblock %}
