--- a/templates/recetas/index.html.twig
+++ b/templates/recetas/index.html.twig
@@ -42,5 +42,12 @@
             </tbody>
         </table>
     </div>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} mt-3">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
 </div>
 {% endblock %}
