--- a/templates/tiposrecetas/tiposrecetas.html.twig
+++ b/templates/tiposrecetas/tiposrecetas.html.twig
@@ -10,7 +10,7 @@
         <!-- Logo -->
         <div class="flex items-center space-x-2">
             <img src="{{ asset('assets/IconoRobot.png') }}" alt="Icono Robot" class="w-12 h-12">
-            <h1 class="text-lg font-semibold text-gray-700">ReciTech</h1>
+            <a href="/home" class="text-lg font-semibold text-gray-700">ReciTech</a>
         </div>
         <!-- Menú -->
         <nav class="flex items-center space-x-6 text-xs">
