--- a/templates/recetas/nueva.html.twig
+++ b/templates/recetas/nueva.html.twig
@@ -9,8 +9,16 @@
             <h1 class="mb-4">Crear nueva receta</h1>
             <div class="card shadow-sm">
                 <div class="card-body">
+                    {% for label, messages in app.flashes %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ label }} mt-3">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+
                     {% if receta.imagen %}
-                        <img src="{{ asset('assets/fotorecetas/' ~ receta.foto) }}" alt="Foto de la receta" class="img-fluid mb-3">
+                        <img src="{{ asset('assets/fotorecetas/' ~ receta.imagen) }}" alt="Foto de la receta" class="img-fluid mb-3">
                     {% endif %}
                     {{ form_start(form) }}
                         {{ form_row(form.nombre) }}
@@ -25,6 +33,8 @@
                             {{ form_widget(form.recetaIngredientes) }}
                         </div>
                         <button type="button" class="btn btn-info mt-2" id="add-ingrediente">Añadir ingrediente</button>
+
+                        {{ form_row(form.imagen) }}
 
                         <button class="btn btn-success mt-3">Guardar</button>
                     {{ form_end(form) }}
