--- a/templates/recetas/ver.html.twig
+++ b/templates/recetas/ver.html.twig
@@ -11,6 +11,12 @@
                     <h3 class="mb-0">Detalle de la Receta</h3>
                 </div>
                 <div class="card-body">
+                    {% if receta.imagen %}
+                        <img src="{{ asset('assets/fotorecetas/' ~ receta.imagen) }}" alt="Imagen de la receta" class="img-fluid mb-3">
+                    {% else %}
+                        <!-- No hay imagen para esta receta -->
+                        <div class="alert alert-warning mt-2">No hay imagen para esta receta.</div>
+                    {% endif %}
                     <ul class="list-group list-group-flush mb-3">
                         <li class="list-group-item"><strong>ID:</strong> {{ receta.id }}</li>
                         <li class="list-group-item"><strong>Nombre:</strong> {{ receta.nombre }}</li>
