--- a/templates/recetas/index.html.twig
+++ b/templates/recetas/index.html.twig
@@ -6,7 +6,7 @@
 <div class="container mt-4">
     <h1 class="mb-4">Listado de Recetas</h1>
     <div class="mb-3 d-flex justify-content-between">
-        <a href="{{ path('app_administrador') }}" class="btn btn-secondary">Volver al panel de administración</a>
+        <a href="{{ path('administrador') }}" class="btn btn-secondary">Volver al panel de administración</a>
         <a href="{{ path('receta_nueva') }}" class="btn btn-primary">Nueva Receta</a>
     </div>
     <div class="table-responsive">
